[package]
authors = ['Manta Network']
build = 'build.rs'
default-run = "manta"
description = 'Manta Parachain Node.'
edition = '2021'
homepage = 'https://manta.network'
license = 'GPL-3.0'
name = 'manta'
repository = 'https://github.com/Manta-Network/Manta/'
rust-version = '1.71'
version = '4.6.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
async-trait = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
codec = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tracing-core = { workspace = true }

# Substrate frames
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }

# RPC related dependencies
frame-rpc-system = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
pallet-transaction-payment-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }

pallet-farming-rpc-api = { workspace = true }
pallet-farming-rpc-runtime-api = { workspace = true }
zenlink-protocol = { workspace = true }
zenlink-protocol-rpc = { workspace = true }
zenlink-protocol-runtime-api = { workspace = true }

# Substrate client dependencies
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }

# Substrate primitives
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-arithmetic = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Cumulus dependencies
cumulus-client-cli = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-relay-chain = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }

# Nimbus dependencies
nimbus-consensus = { workspace = true }
nimbus-primitives = { workspace = true }
pallet-author-inherent = { workspace = true }

# Polkadot dependencies
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true }

# Self dependencies
calamari-runtime = { workspace = true }
manta-primitives = { workspace = true }
manta-runtime = { workspace = true }
pallet-lottery = { workspace = true, features = ["rpc"] }
pallet-manta-pay = { workspace = true, features = ["rpc", "runtime"] }
pallet-manta-sbt = { workspace = true, features = ["rpc", "runtime"] }
pallet-parachain-staking = { workspace = true }
session-key-primitives = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
fast-runtime = [
  "manta-runtime/fast-runtime",
  "calamari-runtime/fast-runtime",
]
runtime-benchmarks = [
  'calamari-runtime/runtime-benchmarks',
  'polkadot-service/runtime-benchmarks',
  'manta-runtime/runtime-benchmarks',
]
try-runtime = [
  'calamari-runtime/try-runtime',
  'manta-runtime/try-runtime',
  'try-runtime-cli/try-runtime',
]
