[package]
authors.workspace = true
build = 'build.rs'
default-run = "manta"
description = 'Manta Parachain Node.'
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = 'manta'
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
async-trait = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
codec = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

# Substrate frames
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }
frame-support = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
try-runtime-cli = { workspace = true, optional = true }

# RPC related dependencies
frame-rpc-system = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
pallet-transaction-payment-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }

frame-system-rpc-runtime-api = { workspace = true }
pallet-farming-rpc-api = { workspace = true }
pallet-farming-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
zenlink-protocol = { workspace = true, features = ["std"] }
zenlink-protocol-rpc = { workspace = true }
zenlink-protocol-runtime-api = { workspace = true, features = ["std"] }

# Substrate client dependencies
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }

# Substrate primitives
pallet-transaction-payment = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-application-crypto = { workspace = true, features = ["std"] }
sp-arithmetic = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
sp-offchain = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-session = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
sp-transaction-pool = { workspace = true, features = ["std"] }
sp-version = { workspace = true, features = ["std"] }
substrate-prometheus-endpoint = { workspace = true }

# Cumulus dependencies
cumulus-client-cli = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-relay-chain = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-parachain-inherent = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent = { workspace = true, features = ["std"] }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }

# Nimbus dependencies
nimbus-consensus = { workspace = true }
nimbus-primitives = { workspace = true, features = ["std"] }
pallet-author-inherent = { workspace = true, features = ["std"] }

# Polkadot dependencies
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true, features = ["std"] }
polkadot-service = { workspace = true }
xcm = { workspace = true, features = ["std"] }

# Self dependencies
calamari-runtime = { workspace = true }
manta-primitives = { workspace = true }
manta-runtime = { workspace = true }
manta-support = { workspace = true, features = ["rpc", "serde"] }
pallet-lottery = { workspace = true, features = ["rpc"] }
pallet-manta-pay = { workspace = true, features = ["rpc", "runtime"] }
pallet-manta-sbt = { workspace = true, features = ["rpc", "runtime"] }
pallet-parachain-staking = { workspace = true, features = ["std"] }
session-key-primitives = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
fast-runtime = [
  "manta-runtime/fast-runtime",
  "calamari-runtime/fast-runtime",
]
runtime-benchmarks = [
  'calamari-runtime/runtime-benchmarks',
  'polkadot-service/runtime-benchmarks',
  'manta-runtime/runtime-benchmarks',
  'manta-primitives/runtime-benchmarks',
  'polkadot-primitives/runtime-benchmarks',
  'sc-service/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
  'polkadot-cli/runtime-benchmarks',
  'frame-benchmarking/runtime-benchmarks',
  'frame-benchmarking-cli/runtime-benchmarks',
  'cumulus-primitives-core/runtime-benchmarks',
]
try-runtime = [
  'calamari-runtime/try-runtime',
  'manta-runtime/try-runtime',
  'try-runtime-cli/try-runtime',
  'frame-try-runtime/try-runtime',
]
