[package]
authors = ['Manta Network']
name = "manta-primitives"
version = '3.1.4'
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
repository = 'https://github.com/Manta-Network/Manta/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
smallvec = "1.6.1"
log = "0.4.14"

# manta-rs dependencies
manta-accounting = { git = "https://github.com/manta-network/manta-rs.git", default-features = false }

# Substrate primitives
frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.16", default-features = false, optional = true }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
sp-io = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = "polkadot-v0.9.16" }
xcm-executor = { git = 'https://github.com/paritytech/polkadot.git', default-features = false, branch = "release-v0.9.16"}
xcm = { git = 'https://github.com/paritytech/polkadot.git', default-features = false, branch = "release-v0.9.16" }
xcm-builder = { git = 'https://github.com/paritytech/polkadot.git', default-features = false, branch = "release-v0.9.16"}

[features]
default = ["std"]
std = [
	'codec/std',
	'sp-consensus-aura/std',
	'scale-info/std',
	'sp-io/std',
	'sp-std/std',
	'manta-accounting/std',
	'log/std',
	'frame-support/std',
	'frame-system/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-runtime/std',
	'xcm-executor/std',
	'xcm-builder/std',
	'xcm/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'xcm-builder/runtime-benchmarks',
]